modules/geos-infra/geos-vpc.tf
resource "aws_vpc" "geos_vpc" {
  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "${var.environment_name}-geos-vpc"
    Environment = var.environment_name
  }
}
